# kunpBFV

./: CMakeLists.txt  bench.sh  bfv_demo.cu  correct_add.cu  correct_encrypt.cu  correct_mult.cu  perf_add.cu  perf_encrypt.cu  perf_mult.cu  run.sh
include/: BFVScheme.cuh  BFVScheme.h  BFVcontext.cuh  BFVcontext.h  BasisConv.cuh  BasisConv_QR.cuh  Ciphertext.cuh  Encoder.cuh  ExternalProduct.cuh  Key.cuh  KeySwitch_23.cuh  Key_decomp.cuh  Params.cuh  Plaintext.cuh  Sampler_impl.cuh  SecretKey.cuh  Utils.cuh  common.h  ntt_60bit.cuh  poly_arithmetic.cuh  uint128.cuh  uintarith_bfv.h
include/advanced/: MatrixDiag.cuh  MatrixDiag.h  SchemeAlgo.cuh  SchemeAlgo.h
